Phase 20: 백엔드 성능 최적화 (인덱스 추가, DashboardService 쿼리 최적화, JPA 페치 전략 정리)
1단계 - DB 인덱스: 8개 엔티티에 20개 인덱스 추가 (User, Incident, ServiceRequest, Change, Inspection, AssetHw/Sw/Oa)
2단계 - DashboardService: countByStatusCd 개별 호출 → countGroupByStatusCd 집계 쿼리 (35회→10회), SLA 초과/경고를 DB COUNT로 전환
3단계 - JPA 페치 전략: findRecentWithCompany JOIN FETCH, IncidentAsset saveAll 배치 저장, 댓글/이력 API 페이징 지원